--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/blowfish"]
 	path = themes/blowfish
 	url = https://github.com/nunocoracao/blowfish.git
+[submodule "themes/compose"]
+	path = themes/compose
+	url = https://github.com/onweru/compose/
