--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://thomazgo.github.io/HugoGithubPages/'
 languageCode = 'fr'
 title = "Blog de Thomas Buisson"
 theme = 'beautifulhugo'
